<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Encabezado -->
    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/headerfooter"
        android:layout_marginTop="-125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView para el título de la aplicación -->
    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- EditText para el nombre -->
    <EditText
        android:id="@+id/etlNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <!-- EditText para el email -->
    <EditText
        android:id="@+id/etlEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etlNombre" />

    <!-- Botón para agregar usuario -->
    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_agregar_usuario"
        app:layout_constraintEnd_toEndOf="@+id/etlEmail"
        app:layout_constraintStart_toStartOf="@+id/etlEmail"
        app:layout_constraintTop_toBottomOf="@+id/etlEmail" />

    <!-- TextView para "Base de Datos" -->
    <TextView
        android:id="@+id/tvDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_database"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnMostrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Botón para mostrar usuarios -->
    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_mostrar_usuarios"
        app:layout_constraintEnd_toEndOf="@+id/btnAgregar"
        app:layout_constraintStart_toStartOf="@+id/btnAgregar"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

    <!-- ListView -->
    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDatabase" />

    <!-- Pie de página -->
    <ImageView
        android:id="@+id/ivFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/headerfooter"
        android:layout_marginBottom="-125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
